--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,10 @@
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: 'Trebuchet MS', sans-serif;
   line-height: 1.5;
   font-weight: 400;
   color-scheme: light dark;
   color: rgb(30, 30, 30);
-  background-color: #fefefe;
+  background-color: 'white';
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
